/*
 * $Id: ChangeLog,v 1.2903 2004/05/09 05:22:39 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-05-09 03:59 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    ! Corrected & as continuation operator only when followed by white space.

2004-05-08 22:21 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    ! Fixed GPF Trap related to uninitialized .type when seaching in Hashes.

2004-05-08 19:53 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/simplex.c
    * Minor revisions.

  * source/compiler/harbour.slx
    ! Fixed GPF Trap related to unterminated string error.

2004-05-09 23:33 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbdefs.h
    * new macros HB_{GET|PUT}_{LE|BE}_UINT{24|64} to retrieve/store
      24 and 64 bit integers in endian independent way

  * xharbour/source/rdd/rddord.prg
    + ORDWILDSEEK(cPatern, [lCont]) added (rather to illustrate posibilities)
      of new DBOI_SKIP{WILD|EVAL|REGEX} then final function. After beta1
      release I'll implement all the ORD{WILD|EVAL|REGEX}SEEK functions on
      C level

  * xharbour/source/rdd/dbcmd.c
  * xharbour/source/rdd/dbf1.c
  * xharbour/source/rdd/workarea.c
  * xharbour/source/rdd/dbffpt/dbffpt1.c
  * xharbour/source/rdd/dbfdpt/dbfdbt1.c
    + added suport in DBF files for: "I" (binary integer, len: 2, 4, 8),
      "D" (binary date, 3), "B" (binary double, 8) fields and some small
      fixes for "M" (4)

  * xharbour/source/rdd/dbfntx/dbfntx1.c
    ! fixed problem with SOFTSEEK on on filtered database int the same
      way as Alexander done in Harbour

  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    * casting added

  * xharbour/source/rtl/gtxvt/gtxvt.c
    ! removed unexisting macros HB_INKEY_RAW and HB_INKEY_EXTENDED

2004-05-08 13:31 UTC-0800 Ron Pinkas <ron@ronpinkas.com>