@@ -1,5 +1,5 @@
 /*
- * $Id: harbour.slx,v 1.51 2004/05/08 17:40:43 ronpinkas Exp $
+ * $Id: harbour.slx,v 1.52 2004/05/09 02:54:29 ronpinkas Exp $
  */
 
 /*
@@ -521,14 +521,17 @@ LANGUAGE_RULES_ARE {
 #undef CUSTOM_ACTION
    #define CUSTOM_ACTION(x) hb_comp_SLX_CustomAction( x )
 
-/* See implementation of STREAM_APPEND below!
 #undef STREAM_EXCEPTION
+/* See implementation of STREAM_APPEND below!
    #define STREAM_EXCEPTION( sPair, cChar ) \
               hb_compGenError( hb_comp_szErrors, 'E', HB_COMP_ERR_STRING_TERMINATOR, sPair, NULL ); \
               aiHold[ iHold++ ] = '\n'; \
               yylval.string = hb_compIdentifierNew( sPair, TRUE ); \
               aiHold[ iHold++ ] = LITERAL + DONT_REDUCE ;
 */
+
+// Not needed at all - save space.
+#define STREAM_EXCEPTION( sPair, cChar )
 
 #undef STREAM_APPEND
    #define STREAM_APPEND(x) \
